--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^3.4.1",
     "vue": "^2.0.1",
     "vue-router": "^2.0.0",
+    "vue-spinner": "^1.0.2",
     "vuefire": "^1.3.0"
   },
   "devDependencies": {
