--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: node_js
 node_js:
   - "4.2"
-  - "0.12"
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+
 
 before_script:
   - npm run unit
