--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
     "unit": "karma start test/unit/karma.conf.js --single-run",
-    "unit-dev" :"karma start test/unit/karma.conf.js",
+    "unit-dev": "karma start test/unit/karma.conf.js",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
     "firebase": "^3.4.1",
     "vue": "^2.0.1",
+    "vue-chartjs": "^2.2.0",
     "vue-router": "^2.0.0",
     "vuefire": "^1.3.0"
   },
