--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "firebase": "^3.4.1",
+    "fullcalendar": "^3.0.1",
+    "jquery": "^3.1.1",
     "vue": "^2.0.1",
     "vue-full-calendar": "0.0.3",
     "vue-router": "^2.0.0",
