--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "firebase": "^3.4.1",
+    "sweetalert2": "^6.0.1",
     "vue": "^2.0.1",
     "vue-chartjs": "^2.2.0",
     "vue-router": "^2.0.0",
@@ -24,6 +25,7 @@
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
