--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "firebase": "^3.4.1",
     "fullcalendar": "^3.0.1",
     "jquery": "^3.1.1",
