--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "babel-polyfill": "^6.16.0",
     "bcrypt": "^0.8.7",
     "firebase": "^3.4.1",
-    "sweetalert2": "^6.0.1",
     "fullcalendar": "^3.0.1",
     "jquery": "^3.1.1",
     "moment": "^2.16.0",
+    "sweetalert2": "^6.0.1",
     "vue": "^2.0.1",
     "vue-chartjs": "^2.2.0",
-    "vue-router": "^2.0.0"
+    "vue-router": "^2.0.0",
+    "vuex": "^2.0.0",
+    "vuex-router-sync": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
