--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "babel-plugin-component": "^0.6.0",
     "babel-polyfill": "^6.16.0",
-    "bcrypt": "^0.8.7",
+    "blueimp-md5": "^2.5.0",
     "firebase": "^3.4.1",
     "fullcalendar": "^3.0.1",
     "jquery": "^3.1.1",
