--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.0.1",
     "vue-chartjs": "^2.2.0",
     "vue-router": "^2.0.0",
+    "vue2-animate": "^1.0.4",
     "vuex": "^2.0.0",
     "vuex-router-sync": "^3.0.0"
   },
