--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-component": "^0.6.0",
     "babel-polyfill": "^6.16.0",
     "blueimp-md5": "^2.5.0",
+    "element-theme": "^0.2.0",
     "firebase": "^3.4.1",
     "fullcalendar": "^3.0.1",
     "jquery": "^3.1.1",
@@ -43,6 +44,7 @@
     "connect-history-api-fallback": "^1.1.0",
     "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
+    "element-theme-default": "^1.0.3",
     "element-ui": "^1.0.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
